@@ -27,8 +27,8 @@ plugins {
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'org.springframework.boot' version '2.5.6'
   id 'com.github.ben-manes.versions' version '0.38.0'
-  id 'hmcts.ccd.sdk' version '0.24.8'
-  id 'au.com.dius.pact' version '4.1.7'
+  id 'hmcts.ccd.sdk' version '0.25.16'
+  id 'au.com.dius.pact' version '4.3.5'
 }
 
 apply plugin: 'cz.habarta.typescript-generator'
@@ -41,6 +41,8 @@ version = '0.0.1'
 ccd {
   configDir = file('ccd-definitions/definitions')
 }
+
+ext['elasticsearch.version'] = '7.17.0'
 
 sourceSets {
   functionalTest {
@@ -67,6 +69,12 @@ sourceSets {
     }
     resources.srcDir file('src/contractTest/resources')
   }
+
+  cftlib {
+    compileClasspath += sourceSets.main.output
+    runtimeClasspath += sourceSets.main.output
+  }
+
 }
 
 idea {
@@ -84,6 +92,8 @@ configurations {
   contractTestCompile.extendsFrom testCompile
   contractTestRuntime.extendsFrom testRuntime
   contractTestImplementation.extendsFrom testImplementation
+  cftlibImplementation.extendsFrom implementation
+  cftlibRuntimeOnly.extendsFrom runtimeOnly
 }
 
 tasks.withType(JavaCompile) {
@@ -227,7 +237,7 @@ dependencyManagement {
   dependencies {
     dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'
     // CVE-2018-10237 - Unbounded memory allocation
-    dependencySet(group: 'com.google.guava', version: '31.0.1-jre') {
+    dependencySet(group: 'com.google.guava', version: '31.1-jre') {
       entry 'guava'
     }
   }
@@ -237,6 +247,8 @@ repositories {
   mavenLocal()
   mavenCentral()
   maven { url 'https://jitpack.io' }
+  // Some Cftlib services still depend on jcenter
+  jcenter()
 }
 
 def versions = [
@@ -250,7 +262,8 @@ def versions = [
   springfoxSwagger  : '3.0.0',
   s2sClient         : '4.0.0',
   pact              : '4.1.7',
-  serenityCoreVersion: '3.0.2'
+  serenityCoreVersion: '3.0.2',
+  ccdCaseDocumentAmClient      : '1.7.3'
 ]
 
 ext["rest-assured.version"] = '4.4.0'
@@ -286,15 +299,17 @@ dependencies {
   implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformsJavaLogging
   implementation group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: versions.reformsJavaLogging
 
+  implementation group: 'com.github.hmcts', name:'ccd-case-document-am-client', version: versions.ccdCaseDocumentAmClient
+
   implementation group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '2.0.0'
-  implementation group: 'com.github.hmcts', name: 'ccd-client', version: '4.8.5'
+  implementation group: 'com.github.hmcts', name: 'ccd-client', version: '4.8.6'
 
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jackson
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: versions.jackson
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: versions.jackson
 
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.17.1'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.17.2'
 
   implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.45'
 
@@ -305,10 +320,10 @@ dependencies {
   implementation group: 'com.github.hmcts', name: 'send-letter-client', version: '3.0.10'
   implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.17.0'
 
-  implementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.6.0-prerelease'
+  implementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.2-Categories'
 
-  implementation group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.1'
-  implementation group: 'org.springframework', name: 'spring-aspects', version: '5.3.12'
+  implementation group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.2'
+  implementation group: 'org.springframework', name: 'spring-aspects', version: '5.3.16'
 
   implementation 'org.projectlombok:lombok:1.18.18'
   compileOnly "org.projectlombok:lombok:1.18.18"
@@ -337,7 +352,7 @@ dependencies {
 
   testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.22.0'
   testImplementation group: 'org.assertj', name: 'assertj-guava', version: '3.4.0'
-  testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-stub-runner', version: '3.1.0'
+  testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-stub-runner', version: '3.1.1'
 
   testImplementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
@@ -388,6 +403,8 @@ dependencies {
 
   contractTestCompile sourceSets.main.runtimeClasspath
   contractTestCompile sourceSets.test.runtimeClasspath
+
+  cftlibImplementation 'com.github.hmcts:rse-cft-lib:0.10.2'
 
 }
 
@@ -547,4 +564,47 @@ pact {
 
 static def getCheckedOutGitCommitHash() {
   'git rev-parse --verify --short HEAD'.execute().text.trim()
+}
+
+
+task loadEnvSecrets() {
+  doLast {
+    if (!project.file('./.aat-env').exists()) {
+      new ByteArrayOutputStream().withStream { os ->
+        exec {
+          commandLine 'az', 'keyvault', 'secret', 'show', '--vault-name', 'nfdiv-aat', '-o', 'tsv', '--query', 'value', '--name', 'nfdiv-case-api-dot-env'
+          standardOutput = os
+        }
+        project.file('./.aat-env').write(new String(os.toString().replace('\n', '').decodeBase64(), java.nio.charset.StandardCharsets.UTF_8))
+      }
+    }
+  }
+}
+
+task buildCCDXlsx(type: Exec, dependsOn: generateCCDConfig) {
+  group 'ccd tasks'
+  commandLine './bin/ccd-build-definition.sh'
+  inputs.dir layout.buildDirectory.dir('definitions')
+  outputs.dir layout.buildDirectory.dir('ccd-config')
+}
+
+task bootWithCcd(type: org.springframework.boot.gradle.tasks.run.BootRun, dependsOn: [buildCCDXlsx, loadEnvSecrets], group: 'ccd tasks') {
+  classpath sourceSets.cftlib.runtimeClasspath
+  mainClass = 'uk.gov.hmcts.reform.adoption.RunWithCft'
+  doFirst() {
+    // Required by Access Management for Java 17.
+    // https://github.com/x-stream/xstream/issues/101
+    ['java.lang', 'java.util', 'java.lang.reflect', 'java.text', 'java.awt.font'].each {
+      jvmArgs('--add-opens', "java.base/${it}=ALL-UNNAMED")
+    }
+    jvmArgs('--add-opens', 'java.desktop/java.awt.font=ALL-UNNAMED')
+    jvmArgs('-XX:ReservedCodeCacheSize=64m')
+
+    project.file('./.aat-env').readLines().each() {
+      def index = it.indexOf("=")
+      def key = it.substring(0, index)
+      def value = it.substring(index + 1)
+      environment key, value
+    }
+  }
 }
